// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb /> renders correctly 1`] = `
<nav
  style={
    Object {
      "maxWidth": "100%",
      "overflow": "hidden",
    }
  }
>
  <ol
    className="breadcrumb--light bhmjif"
    itemScope={true}
    itemType="http://schema.org/Breadcrumb"
  >
    Breadcrumb
    List
  </ol>
</nav>
`;

exports[`<Breadcrumb /> should render when empty list passed in 1`] = `
<nav
  style={
    Object {
      "maxWidth": "100%",
      "overflow": "hidden",
    }
  }
>
  <ol
    className="breadcrumb--light blNvKQ"
    itemScope={true}
    itemType="http://schema.org/Breadcrumb"
  />
</nav>
`;
